--- a/index.html
+++ b/index.html
@@ -5,158 +5,193 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>GACOR EXPRESS</title>
 
-<!-- Bootstrap 5 -->
+<!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Icons -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
+<!-- Leaflet -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
 <style>
-body{
-    background:#f5f7fa;
-}
-.banner{
-    background:linear-gradient(90deg,#0d6efd,#20c997);
-    color:#fff;
-}
-.menu-card{
-    cursor:pointer;
-    transition:.3s;
-}
-.menu-card:hover{
-    transform:translateY(-5px);
-}
-.hidden{display:none;}
+body{background:#f2f4f7}
+.app{max-width:420px;margin:auto;background:#fff;min-height:100vh}
+.header{background:linear-gradient(135deg,#0d6efd,#20c997);color:#fff;padding:15px}
+.menu-item{background:#f8f9fa;border-radius:15px;padding:15px;text-align:center;cursor:pointer}
+.menu-item i{font-size:28px}
+#map{height:300px;border-radius:10px}
 </style>
 </head>
 
 <body>
 
-<!-- BANNER -->
-<section class="banner py-5">
-<div class="container">
-<div class="row align-items-center">
-    <div class="col-md-6">
-        <h1 class="fw-bold">GACOR EXPRESS</h1>
-        <p>Layanan Antar Jemput Ojek Online & Antar Makanan<br>Area Long Ikis</p>
-    </div>
-    <div class="col-md-6 text-center">
-        <img src="banner.jpg" class="img-fluid rounded" alt="Gacor Express">
-    </div>
-</div>
-</div>
-</section>
+<div class="app">
 
-<!-- MENU -->
-<section class="py-5">
-<div class="container">
-<h4 class="mb-4 text-center">Pilih Layanan</h4>
+<div class="header">
+<h5 class="fw-bold mb-0">GACOR EXPRESS</h5>
+<small>Ojek Online & Antar Makanan<br>Area Long Ikis</small>
+</div>
 
-<div class="row g-4 text-center">
-    <div class="col-md-4">
-        <div class="card menu-card p-4" onclick="selectService('Ojek Online')">
-            <i class="bi bi-bicycle fs-1 text-primary"></i>
-            <h5 class="mt-2">Ojek Online</h5>
+<img src="banner.jpg" class="img-fluid">
+
+<div class="p-3">
+<div class="row g-3 text-center">
+    <div class="col-4">
+        <div class="menu-item" onclick="openOrder('Ojek Online')">
+            <i class="bi bi-bicycle text-primary"></i>
+            <div>Ojek</div>
         </div>
     </div>
-    <div class="col-md-4">
-        <div class="card menu-card p-4" onclick="selectService('Food Delivery')">
-            <i class="bi bi-bag-heart fs-1 text-success"></i>
-            <h5 class="mt-2">Food Delivery</h5>
+    <div class="col-4">
+        <div class="menu-item" onclick="openOrder('Food Delivery')">
+            <i class="bi bi-bag-heart text-success"></i>
+            <div>Food</div>
         </div>
     </div>
-    <div class="col-md-4">
-        <div class="card menu-card p-4" onclick="selectService('Jastip')">
-            <i class="bi bi-box-seam fs-1 text-warning"></i>
-            <h5 class="mt-2">Jastip</h5>
+    <div class="col-4">
+        <div class="menu-item" onclick="openOrder('Jastip')">
+            <i class="bi bi-box-seam text-warning"></i>
+            <div>Jastip</div>
         </div>
     </div>
 </div>
 </div>
-</section>
 
-<!-- FORM -->
-<section class="pb-5 hidden" id="orderForm">
-<div class="container">
-<div class="card p-4">
-<h5 class="mb-3">Form Pemesanan</h5>
+</div>
 
-<div class="mb-3">
+<!-- MODAL -->
+<div class="modal fade" id="orderModal">
+<div class="modal-dialog modal-dialog-centered modal-fullscreen-sm-down">
+<div class="modal-content">
+
+<div class="modal-header">
+<h5 class="modal-title">Form Pemesanan</h5>
+<button class="btn-close" data-bs-dismiss="modal"></button>
+</div>
+
+<div class="modal-body">
+
+<div class="mb-2">
 <label>Nama Pemesan</label>
-<input type="text" id="nama" class="form-control">
+<input id="nama" class="form-control">
 </div>
 
-<div class="mb-3">
+<div class="mb-2">
 <label>Layanan</label>
-<input type="text" id="layanan" class="form-control" readonly>
+<input id="layanan" class="form-control" readonly>
 </div>
 
-<div class="mb-3">
-<label>Jemput (GPS Otomatis)</label>
-<input type="text" id="jemput" class="form-control" readonly>
+<div class="mb-2">
+<label>Jemput</label>
+<input id="jemput" class="form-control" readonly>
 </div>
 
-<div class="mb-3">
-<label>Antar (Tujuan)</label>
-<input type="text" id="antar" class="form-control" placeholder="Masukkan lokasi tujuan">
+<div class="mb-2">
+<label>Antar (Tap Peta)</label>
+<input id="antar" class="form-control" readonly>
 </div>
 
-<div class="mb-3">
+<div class="mb-2">
 <label>Tarif</label>
-<input type="text" id="tarif" class="form-control" readonly>
+<input id="tarif" class="form-control fw-bold" readonly>
 </div>
 
-<button class="btn btn-success w-100" onclick="kirimWA()">
+<div id="map"></div>
+
+<button class="btn btn-success w-100 mt-3" onclick="kirimWA()">
 <i class="bi bi-whatsapp"></i> Kirim Pesanan
 </button>
+
+</div>
+
 </div>
 </div>
-</section>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
+let modal = new bootstrap.Modal(document.getElementById('orderModal'));
+let map, jemputMarker, antarMarker;
 let lat1, lon1;
 
-function selectService(service){
-    document.getElementById('orderForm').classList.remove('hidden');
+// buka form
+function openOrder(service){
     document.getElementById('layanan').value = service;
-    getLocation();
+    modal.show();
+    setTimeout(initMap,500);
 }
 
-function getLocation(){
+// init map
+function initMap(){
+    if(map) return;
+
+    map = L.map('map').setView([0,0], 15);
+
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
+        attribution:'© OpenStreetMap'
+    }).addTo(map);
+
     navigator.geolocation.getCurrentPosition(pos=>{
         lat1 = pos.coords.latitude;
         lon1 = pos.coords.longitude;
+
+        map.setView([lat1,lon1],16);
+        jemputMarker = L.marker([lat1,lon1]).addTo(map).bindPopup("Titik Jemput").openPopup();
         document.getElementById('jemput').value = lat1+', '+lon1;
+    });
+
+    map.on('click', function(e){
+        if(antarMarker) map.removeLayer(antarMarker);
+        antarMarker = L.marker(e.latlng).addTo(map).bindPopup("Tujuan").openPopup();
+
+        document.getElementById('antar').value = e.latlng.lat+', '+e.latlng.lng;
+
+        let jarak = hitungJarak(lat1,lon1,e.latlng.lat,e.latlng.lng);
+        let tarif = hitungTarif(jarak);
+        document.getElementById('tarif').value = 'Rp ' + tarif.toLocaleString();
     });
 }
 
-// Hitung tarif berdasarkan jarak (estimasi)
-document.getElementById('antar').addEventListener('blur',()=>{
-    let distanceKm = Math.random() * 3 + 0.5; // simulasi jarak
+// hitung jarak
+function hitungJarak(lat1,lon1,lat2,lon2){
+    const R = 6371;
+    const dLat = (lat2-lat1)*Math.PI/180;
+    const dLon = (lon2-lon1)*Math.PI/180;
+    const a =
+      Math.sin(dLat/2)*Math.sin(dLat/2) +
+      Math.cos(lat1*Math.PI/180)*Math.cos(lat2*Math.PI/180) *
+      Math.sin(dLon/2)*Math.sin(dLon/2);
+    return R * (2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a)));
+}
+
+// hitung tarif
+function hitungTarif(jarak){
     let tarif = 9000;
-    if(distanceKm > 1){
-        let tambahan = Math.round((distanceKm-1)*1000);
-        if(tambahan < 500) tambahan = 1000;
-        tarif += tambahan;
+    if(jarak > 1){
+        let sisa = (jarak-1)*1000;
+        if(sisa < 500) sisa = 1000;
+        else sisa = Math.ceil(sisa/1000)*1000;
+        tarif += sisa;
     }
-    document.getElementById('tarif').value = 'Rp ' + tarif.toLocaleString();
-});
+    return tarif;
+}
 
+// kirim ke WA
 function kirimWA(){
-    let nama = document.getElementById('nama').value;
-    let layanan = document.getElementById('layanan').value;
-    let jemput = document.getElementById('jemput').value;
-    let antar = document.getElementById('antar').value;
-    let tarif = document.getElementById('tarif').value;
+    let text =
+`Nama: ${nama.value}
+Layanan: ${layanan.value}
+Jemput: ${jemput.value}
+Antar: ${antar.value}
+Tarif: ${tarif.value}`;
 
-    let url = `https://wa.me/6282154306353?text=
-Nama:%20${nama}%0A
-Layanan:%20${layanan}%0A
-Jemput:%20${jemput}%0A
-Antar:%20${antar}%0A
-Tarif:%20${tarif}`;
-
-    window.open(url,'_blank');
+    window.open(
+        `https://wa.me/6282154306353?text=${encodeURIComponent(text)}`,
+        '_blank'
+    );
 }
 </script>
 
