--- a/index.html
+++ b/index.html
@@ -5,95 +5,91 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>GACOR EXPRESS</title>
 
-<!-- Bootstrap 5 -->
+<!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- Icons -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
 <!-- Leaflet -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 
-<!-- PWA -->
-<link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#1abc9c">
 
 <style>
-body{background:#f5f6fa;padding-bottom:70px}
+body{background:#f4f6f9;padding-bottom:75px}
 .banner img{max-width:100%;border-radius:12px}
 .menu-card{cursor:pointer}
 .bottom-nav{
  position:fixed;bottom:0;left:0;right:0;
- background:#fff;border-top:1px solid #ddd
+ background:#fff;border-top:1px solid #ddd;
 }
-.bottom-nav a{font-size:12px}
-#map{height:250px;border-radius:10px}
+.bottom-nav a{font-size:12px;color:#555}
+.bottom-nav i{font-size:22px}
+#map{height:260px;border-radius:12px}
 </style>
 </head>
 
 <body>
 
 <div class="container mt-3">
+<h4 class="text-center fw-bold">GACOR EXPRESS</h4>
+<p class="text-center text-muted">Layanan Antar Jemput & Makanan</p>
 
-  <h4 class="fw-bold text-center">GACOR EXPRESS</h4>
-  <p class="text-center text-muted">Layanan Antar Jemput & Makanan</p>
-
-  <!-- Banner -->
-  <div class="banner text-center mb-3">
-    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEijvQWrMotbzVppCxgv1YTqOcGuT3ZM4QrhljQ5TqxCKjYiu8bHlzNvySFMT5hoeol8EPnIp2EMGnwZa5YIMORbyeC5H3YoO0_2RFXYbetZQL-zIfPcpC-l4fMvD_e5KJT9Qc2F_k01Tv9mX12j1Km96Ll3oYH5CrhfGwbymFb3dkH_63ED_T3A1DUnK3s/s320/IMG_20260117_100108.jpg">
-  </div>
-
-  <!-- Menu -->
-  <div class="row g-3 text-center">
-    <div class="col-4">
-      <div class="card menu-card" onclick="openOrder('Ojek Online')">
-        <div class="card-body">
-          <i class="bi bi-bicycle fs-1 text-success"></i>
-          <p class="mt-2">Ojek Online</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-4">
-      <div class="card menu-card" onclick="openOrder('Food Delivery')">
-        <div class="card-body">
-          <i class="bi bi-bag-heart fs-1 text-danger"></i>
-          <p class="mt-2">Food Delivery</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-4">
-      <div class="card menu-card" onclick="openOrder('Jastip')">
-        <div class="card-body">
-          <i class="bi bi-box-seam fs-1 text-primary"></i>
-          <p class="mt-2">Jastip</p>
-        </div>
-      </div>
-    </div>
-  </div>
+<!-- Banner -->
+<div class="text-center mb-3 banner">
+<img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEijvQWrMotbzVppCxgv1YTqOcGuT3ZM4QrhljQ5TqxCKjYiu8bHlzNvySFMT5hoeol8EPnIp2EMGnwZa5YIMORbyeC5H3YoO0_2RFXYbetZQL-zIfPcpC-l4fMvD_e5KJT9Qc2F_k01Tv9mX12j1Km96Ll3oYH5CrhfGwbymFb3dkH_63ED_T3A1DUnK3s/s320/IMG_20260117_100108.jpg">
 </div>
 
-<!-- Modal Order -->
+<!-- Menu -->
+<div class="row g-3 text-center">
+<div class="col-4">
+<div class="card menu-card" onclick="openOrder('Ojek Online')">
+<div class="card-body">
+<i class="bi bi-bicycle text-success"></i>
+<p>Ojek</p>
+</div>
+</div>
+</div>
+
+<div class="col-4">
+<div class="card menu-card" onclick="openOrder('Food Delivery')">
+<div class="card-body">
+<i class="bi bi-bag-heart text-danger"></i>
+<p>Food</p>
+</div>
+</div>
+</div>
+
+<div class="col-4">
+<div class="card menu-card" onclick="openOrder('Jastip')">
+<div class="card-body">
+<i class="bi bi-box-seam text-primary"></i>
+<p>Jastip</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+
+<!-- Modal -->
 <div class="modal fade" id="orderModal">
 <div class="modal-dialog modal-lg">
 <div class="modal-content">
 <div class="modal-header">
-<h5 class="modal-title">Form Pemesanan</h5>
+<h5>Form Pemesanan</h5>
 <button class="btn-close" data-bs-dismiss="modal"></button>
 </div>
 
 <div class="modal-body">
-<input type="text" id="nama" class="form-control mb-2" placeholder="Nama Pemesan">
-<input type="text" id="layanan" class="form-control mb-2" readonly>
+<input id="nama" class="form-control mb-2" placeholder="Nama Pemesan">
+<input id="layanan" class="form-control mb-2" readonly>
 
 <button class="btn btn-outline-success w-100 mb-2" onclick="getLocation()">
 📍 Ambil Lokasi Jemput
 </button>
 
-<div id="map" class="mb-2"></div>
+<small class="text-muted">Klik peta untuk menentukan titik antar</small>
+<div id="map" class="my-2"></div>
 
-<input type="text" id="antar" class="form-control mb-2" placeholder="Tujuan Antar">
 <p class="fw-bold">Tarif: Rp <span id="tarif">0</span></p>
 
 <button class="btn btn-success w-100" onclick="sendWA()">Kirim Pesanan</button>
@@ -103,16 +99,10 @@ body{background:#f5f6fa;padding-bottom:70px}
 </div>
 
 <!-- Bottom Nav -->
-<div class="bottom-nav d-flex justify-content-around py-2">
-<a href="#" class="text-decoration-none text-center">
-<i class="bi bi-house fs-4"></i><br>Home
-</a>
-<a href="https://wa.me/6282154306353" class="text-decoration-none text-center">
-<i class="bi bi-question-circle fs-4"></i><br>Tanya
-</a>
-<a href="https://wa.me/6282154306353" class="text-decoration-none text-center">
-<i class="bi bi-chat-dots fs-4"></i><br>Admin
-</a>
+<div class="bottom-nav d-flex justify-content-around py-2 text-center">
+<a href="#"><i class="bi bi-house"></i><br>Home</a>
+<a href="https://wa.me/6282154306353"><i class="bi bi-question-circle"></i><br>Tanya</a>
+<a href="https://wa.me/6282154306353"><i class="bi bi-chat-dots"></i><br>Admin</a>
 </div>
 
 <!-- JS -->
@@ -120,7 +110,8 @@ body{background:#f5f6fa;padding-bottom:70px}
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
 <script>
-let map, marker, latlng;
+let map, jemputMarker, antarMarker, line;
+let jemputLatLng, antarLatLng;
 
 function openOrder(service){
  document.getElementById('layanan').value = service;
@@ -129,45 +120,61 @@ function openOrder(service){
 
 function getLocation(){
  navigator.geolocation.getCurrentPosition(pos=>{
-   latlng=[pos.coords.latitude,pos.coords.longitude];
-   map=L.map('map').setView(latlng,15);
+   jemputLatLng=[pos.coords.latitude,pos.coords.longitude];
+
+   map=L.map('map').setView(jemputLatLng,15);
    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
-   marker=L.marker(latlng).addTo(map).bindPopup("Titik Jemput").openPopup();
+
+   jemputMarker=L.marker(jemputLatLng).addTo(map).bindPopup("📍 Jemput").openPopup();
+
+   map.on('click',e=>{
+     setAntar(e.latlng);
+   });
  });
 }
 
-document.getElementById("antar").addEventListener("change",()=>{
- let jarak=prompt("Masukkan jarak (KM)");
+function setAntar(latlng){
+ antarLatLng=[latlng.lat,latlng.lng];
+
+ if(antarMarker) map.removeLayer(antarMarker);
+ if(line) map.removeLayer(line);
+
+ antarMarker=L.marker(antarLatLng).addTo(map).bindPopup("📍 Antar").openPopup();
+ line=L.polyline([jemputLatLng,antarLatLng]).addTo(map);
+
+ hitungTarif();
+}
+
+function hitungTarif(){
+ let jarak=map.distance(jemputLatLng,antarLatLng)/1000;
  let tarif=9000;
+
  if(jarak>1){
-   let extra=Math.ceil((jarak-1)*1000);
+   let extra=(jarak-1)*1000;
+   extra=extra<500?1000:Math.round(extra/1000)*1000;
    tarif+=extra;
  }
- document.getElementById("tarif").innerText=tarif;
-});
+ document.getElementById("tarif").innerText=tarif.toLocaleString();
+}
 
 function sendWA(){
  let nama=nama.value;
  let layanan=layanan.value;
- let antar=document.getElementById("antar").value;
  let tarif=document.getElementById("tarif").innerText;
- let maps=`https://www.openstreetmap.org/?mlat=${latlng[0]}&mlon=${latlng[1]}`;
 
- let text=`Pesanan GACOR EXPRESS%0A
-Nama: ${nama}%0A
-Layanan: ${layanan}%0A
-Tujuan: ${antar}%0A
-Tarif: Rp ${tarif}%0A
-Maps Jemput: ${maps}`;
+ let jemput=`https://www.openstreetmap.org/?mlat=${jemputLatLng[0]}&mlon=${jemputLatLng[1]}`;
+ let antar=`https://www.openstreetmap.org/?mlat=${antarLatLng[0]}&mlon=${antarLatLng[1]}`;
 
- window.open(`https://wa.me/6282154306353?text=${text}`);
-}
+ let text=`Pesanan GACOR EXPRESS
+Nama: ${nama}
+Layanan: ${layanan}
+Tarif: Rp ${tarif}
+Maps Jemput: ${jemput}
+Maps Antar: ${antar}`;
 
-// PWA
-if('serviceWorker' in navigator){
- navigator.serviceWorker.register('sw.js');
+ window.open(`https://wa.me/6282154306353?text=${encodeURIComponent(text)}`);
 }
 </script>
 
 </body>
-</html>
+ </html>
